--- a/index.html
+++ b/index.html
@@ -7,22 +7,43 @@
   </head>
   <body>
     <nav class="menu">
-
-      <span>Item 1</span>
-      <span>Item 2</span>
-      <span>Item 3</span>
-      <span>Item 4</span>
-
-    </nav>
-
-    <nav class="menu menu_vertical">
-
-      <span>Item 1</span>
-      <span>Item 2</span>
-      <span>Item 3</span>
-      <span>Item 4</span>
-
-    </nav>
+    <span>
+      Item 1
+      <nav class="menu menu_vertical">
+        <span>Item 1</span>
+        <span>Item 2</span>
+        <span>Item 3</span>
+        <span>Item 4</span>
+      </nav>
+    </span>
+    <span>
+      Item 2
+      <nav class="menu menu_vertical">
+        <span>Item 1</span>
+        <span>Item 2</span>
+        <span>Item 3</span>
+        <span>Item 4</span>
+      </nav>
+    </span>
+    <span>
+      Item 3
+      <nav class="menu menu_vertical">
+        <span>Item 1</span>
+        <span>Item 2</span>
+        <span>Item 3</span>
+        <span>Item 4</span>
+      </nav>
+    </span>
+    <span>
+      Item 4
+      <nav class="menu menu_vertical">
+        <span>Item 1</span>
+        <span>Item 2</span>
+        <span>Item 3</span>
+        <span>Item 4</span>
+      </nav>
+    </span>
+  </nav>
 
   </body>
 </html>
